--- a/service-discovery/pom.xml
+++ b/service-discovery/pom.xml
@@ -9,19 +9,21 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>gateway-service</artifactId>
+    <artifactId>service-discovery</artifactId>
 
     <properties>
         <maven.compiler.source>24</maven.compiler.source>
         <maven.compiler.target>24</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
     <dependencies>
-        <!-- Spring Cloud Gateway -->
+        <!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-netflix-eureka-server -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-gateway</artifactId>
-            <version>4.1.1</version> <!-- Versión explícita -->
+            <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+            <version>4.1.1</version>
         </dependency>
     </dependencies>
+
 </project>
