--- a/gateway-service/pom.xml
+++ b/gateway-service/pom.xml
@@ -23,5 +23,10 @@
             <artifactId>spring-cloud-starter-gateway</artifactId>
             <version>4.1.1</version> <!-- Versión explícita -->
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+            <version>4.1.1</version>
+        </dependency>
     </dependencies>
 </project>
